--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="flipper.js"></script>    
     <meta charset="utf-8">
 </head>
-<div class="container">
-    <div class="card">
-      <div class="front">Click to flip</div>
-      <div class="back">Yo, what up?</div>
-    </div>
-  </div>
+
+
+<ul class="cards">
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Farm.jpg" alt="Avatar"> 
+          <div class="card__title">Pic 1</div>            
+          <p class="card__text">Holder1</p>
+          <button class="btn btn--block card__btn">Button</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Deer.jpg">  
+          <div class="card__title">Pic 2</div>                          
+          <p class="card__text">Holder2</p>
+          <button class="btn btn--block card__btn">Button</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Train.jpg" alt="Avatar"> 
+          <div class="card__title">Pic 3</div>
+          <p class="card__text">Holder3</p>
+          <button class="btn btn--block card__btn">Button</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Antique.jpg" alt="Avatar">             
+          <div class="card__title">Pic 4</div>
+          <p class="card__text">Holder4</p>
+          <button class="btn btn--block card__btn">Button</button>
+        </div>
+      </div>
+    </li>
+  </ul>
