--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <meta charset="utf-8">
 </head>
 
@@ -10,9 +11,9 @@
       <div class="card">
         <div class="card__content">
           <img src="images/Farm.jpg" alt="Avatar"> 
-          <div class="card__title">Pic 1</div>            
-          <p class="card__text">Holder1</p>
-          <button class="btn btn--block card__btn">Button</button>
+          <div class="card__title">Local Farm</div>            
+          <p class="card__text">A farm where produce is made.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
         </div>
       </div>
     </li>
@@ -20,9 +21,9 @@
       <div class="card">
         <div class="card__content">
           <img src="images/Deer.jpg">  
-          <div class="card__title">Pic 2</div>                          
-          <p class="card__text">Holder2</p>
-          <button class="btn btn--block card__btn">Button</button>
+          <div class="card__title">Local Deer</div>                     
+          <p class="card__text">A deer that eats fresh produce from local farms.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
         </div>
       </div>
     </li>
@@ -30,9 +31,39 @@
       <div class="card">
         <div class="card__content">
           <img src="images/Train.jpg" alt="Avatar"> 
-          <div class="card__title">Pic 3</div>
-          <p class="card__text">Holder3</p>
-          <button class="btn btn--block card__btn">Button</button>
+          <div class="card__title">Winter Train</div>
+          <p class="card__text">Transports villagers to work.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Office.jpg" alt="Avatar">             
+          <div class="card__title">Office</div>
+          <p class="card__text">A working office.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Phone.jpeg" alt="Avatar">             
+          <div class="card__title">Antique Piano</div>
+          <p class="card__text">Old piano used to play tunes.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Tank.jpg" alt="Avatar">             
+          <div class="card__title">Antique Piano</div>
+          <p class="card__text">Old piano used to play tunes.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
         </div>
       </div>
     </li>
@@ -40,9 +71,59 @@
       <div class="card">
         <div class="card__content">
           <img src="images/Antique.jpg" alt="Avatar">             
-          <div class="card__title">Pic 4</div>
-          <p class="card__text">Holder4</p>
-          <button class="btn btn--block card__btn">Button</button>
+          <div class="card__title">Antique Piano</div>
+          <p class="card__text">Old piano used to play tunes.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Books.jpg" alt="Avatar">             
+          <div class="card__title">Books</div>
+          <p class="card__text">Interesting books.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Field.jpg" alt="Avatar">             
+          <div class="card__title">Field</div>
+          <p class="card__text">A quite field.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Waterfall.jpg" alt="Avatar">             
+          <div class="card__title">Waterfall</div>
+          <p class="card__text">A serene waterfall.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Elephant.jpg" alt="Avatar">             
+          <div class="card__title">Elephant</div>
+          <p class="card__text">A large elephant.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
+        </div>
+      </div>
+    </li>
+    <li class="cards__item">
+      <div class="card">
+        <div class="card__content">
+          <img src="images/Bed.jpg" alt="Avatar">             
+          <div class="card__title">Comfy Bed</div>
+          <p class="card__text">A nice and comfortable bed.</p>
+          <button class="btn btn--block card__btn">Learn More</button>
         </div>
       </div>
     </li>
